Fix spacing on mobile device at info page

--- a/src/styles/template-styles/info.scss
+++ b/src/styles/template-styles/info.scss
@@ -16,6 +16,7 @@
 
   @media screen and (max-width: $width-m) {
     flex-direction: column;
+    gap: 0;
   }
 
   &:last-child {
